--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.1.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongodb": "^4.11.0",
     "redis": "^4.4.0"
   }
 }
